force-app/main/default/objects/Matrix_Data__c/Matrix_Data__c.object-meta.xml
<CustomObject>
    <label>Matrix Data</label>
    <nameField>
        <displayFormat>MD-{000}</displayFormat>
        <label>Matrix Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matrix Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>