force-app/main/default/objects/Matrix_Data__c/fields/Column_Key__c.field-meta.xml
<CustomField>
    <fullName>Column_Key__c</fullName>
    <label>Column Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>