force-app/main/default/objects/Matrix_Data__c/fields/Row_Key__c.field-meta.xml
<CustomField>
    <fullName>Row_Key__c</fullName>
    <label>Row Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>