force-app/main/default/objects/Matrix_Data__c/fields/Section_Key__c.field-meta.xml
<CustomField>
    <fullName>Section_Key__c</fullName>
    <label>Section Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>