force-app/main/default/objects/Matrix_Data__c/fields/Work_Part__c.field-meta.xml
<CustomField>
    <fullName>Work_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Part</label>
    <referenceTo>Work_Part__c</referenceTo>
    <relationshipLabel>Matrix Data</relationshipLabel>
    <relationshipName>Matrix_Data</relationshipName>
    <type>Lookup</type>
</CustomField>